--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <!-- Primary Meta Tags -->
   <title>GST 100MCQ — GST ভর্তি পরীক্ষার প্র্যাকটিস প্ল্যাটফর্ম</title>
   <meta name="title" content="GST 100MCQ — GST ভর্তি পরীক্ষার প্র্যাকটিস প্ল্যাটফর্ম" />
-  <meta name="description" content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। Physics, Chemistry, Biology ও Mathematics — ১০০ প্রশ্ন, ৬০ মিনিট, তাৎক্ষণিক ফলাফল।" />
-  <meta name="keywords" content="GST, MCQ, ভর্তি পরীক্ষা, Physics, Chemistry, Biology, Mathematics, বাংলাদেশ, Model Test" />
+  <meta name="description"
+    content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। Physics, Chemistry, Biology ও Mathematics — ১০০ প্রশ্ন, ৬০ মিনিট, তাৎক্ষণিক ফলাফল।" />
+  <meta name="keywords"
+    content="GST, MCQ, ভর্তি পরীক্ষা, Physics, Chemistry, Biology, Mathematics, বাংলাদেশ, Model Test" />
   <meta name="author" content="GST 100MCQ" />
   <meta name="robots" content="index, follow" />
 
@@ -24,8 +26,9 @@
   <meta property="og:url" content="https://100gst.vercel.app/" />
   <meta property="og:site_name" content="GST 100MCQ" />
   <meta property="og:title" content="GST 100MCQ — GST ভর্তি পরীক্ষার প্র্যাকটিস প্ল্যাটফর্ম" />
-  <meta property="og:description" content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। Physics, Chemistry, Biology ও Mathematics — ১০০ প্রশ্ন, ৬০ মিনিট, তাৎক্ষণিক ফলাফল।" />
-  <meta property="og:image" content="https://100gst.vercel.app/og-image.svg" />
+  <meta property="og:description"
+    content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। Physics, Chemistry, Biology ও Mathematics — ১০০ প্রশ্ন, ৬০ মিনিট, তাৎক্ষণিক ফলাফল।" />
+  <meta property="og:image" content="https://100gst.vercel.app/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="GST 100MCQ - Online Practice Exam Platform" />
@@ -35,8 +38,9 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://100gst.vercel.app/" />
   <meta name="twitter:title" content="GST 100MCQ — GST ভর্তি পরীক্ষার প্র্যাকটিস প্ল্যাটফর্ম" />
-  <meta name="twitter:description" content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। ১০০ প্রশ্ন | ৬০ মিনিট | তাৎক্ষণিক ফলাফল।" />
-  <meta name="twitter:image" content="https://100gst.vercel.app/og-image.svg" />
+  <meta name="twitter:description"
+    content="GST ভর্তি পরীক্ষার জন্য বিনামূল্যে MCQ প্র্যাকটিস করুন। ১০০ প্রশ্ন | ৬০ মিনিট | তাৎক্ষণিক ফলাফল।" />
+  <meta name="twitter:image" content="https://100gst.vercel.app/og-image.png" />
 </head>
 
 <body>
